[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bno055 = "0.3.3"
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.6.15", features = ["device"] }
embedded-hal = { version = "0.2.6", features = ["unproven"] }
glam = { version = "0.20.0", default-features = false, features = ["libm", "mint"] }
lps22hb = "0.1.0"
mint = "0.5.8"
panic-halt = "0.2.0"
pid = "3.0.0"
shared-bus = "0.2.2"
stm32f3xx-hal = { version = "0.8.1", features = ["ld", "rt", "stm32f303x8"] }

[patch.crates-io]
pid = { git = "https://github.com/Piroro-hs/pid-rs", rev = "3588c136ffb28d749535f147755a280c6fe0a2eb" }

[profile.dev]
lto = true
opt-level = "s"

[profile.release]
debug = true
lto = true
opt-level = "s"
